--- a/PDP/PDP/Views/Doctors/Create.cshtml
+++ b/PDP/PDP/Views/Doctors/Create.cshtml
@@ -28,7 +28,7 @@
 
     <div class="form-group">
         <div class="control-label col-md-2">
-            <h6>Second name</h6>
+            <h6>Last name</h6>
         </div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.SecondName, new { htmlAttributes = new { @class = "form-control" } })
