--- a/PDP/PDP/Views/Home/About.cshtml
+++ b/PDP/PDP/Views/Home/About.cshtml
@@ -7,21 +7,36 @@
 <div class="jumbotron text-center text-light" style="background-color:#04281d;">
 	<div class="container">
 		<h1 class="display-4">PDP GROUP</h1>
-		<p class="lead">"Ah, ha, ha, ha, stayin' alive, stayin' alive"</p>
+        <p class="lead">"Unveiling the Extraordinary: Igniting Possibilities for a Brighter Tomorrow!"</p>
 	</div>
 </div>
 <div class="card text-center">
-	<div class="card-header">
-		<h2>About us</h2>
-	</div>
-	<ul class="list-group list-group-flush">
-		<li class="list-group-item text-center">
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-			<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-		</li>
-		<li class="list-group-item text-center">
-			<h3 style="text-align:center">Careers</h3>
-			<p class="pa" style="text-align:center">You can send your CV to pdp.team.fiction@s.unibuc.ro or call us at +40 700 111 222 333</p>
-		</li>
-	</ul>
+    <div class="card-header">
+        <h2>About us</h2>
+    </div>
+    
+
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item text-center">
+            <img class="figure-img d-sm-inline-flex" width="20%" height="auto" src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,f_auto,q_auto:eco,dpr_1/v1509748305/esxxhcd8cnqoopcythfz.jpg" alt="inside-hospital" />
+
+            <p> At our esteemed institution, we stand as a beacon of excellence in healthcare, dedicated to providing comprehensive and compassionate medical services. With a team of highly skilled professionals, we strive to deliver exceptional care that surpasses expectations.</p>
+
+            <p> Guided by a commitment to healing and innovation, our institution combines cutting-edge technology with the expertise of our renowned physicians, surgeons, and specialists. We embrace a patient-centered approach, tailoring treatment plans to meet individual needs, and empowering patients to actively participate in their health journey.</p>
+
+            <p> As a trusted healthcare provider, we maintain the highest standards of quality and safety, ensuring a secure and comfortable environment for our patients. Our state-of-the-art facilities, advanced diagnostic capabilities, and modern treatment modalities allow us to deliver the best possible outcomes.</p>
+
+            <p> Beyond our clinical expertise, we foster a culture of empathy and compassion, recognizing that every patient is unique and deserving of personalized care. We strive to create a supportive and caring atmosphere, where trust and open communication flourish.</p>
+
+            <p> With a relentless pursuit of excellence, we continue to evolve and innovate, staying at the forefront of medical advancements to deliver the best possible care to our patients. At our institution, your well-being is our top priority, and we are honored to serve you with unwavering dedication and professionalism.</p>
+        </li>
+        <li class="list-group-item text-center">
+            <h3 style="text-align:center">Careers</h3>
+            <img class="figure-img d-sm-inline-flex" width="50%" height="auto" src="https://www.oswestry.life/wp-content/uploads/2023/03/1111.jpg" alt="inside-hospital" />
+            <br />
+            <br />
+            <br />
+            <p class="pa font-weight-bold" style="text-align:center">You can send your CV to pdp.team.fiction1@s.unibuc.ro or call us at +40 700 111 222 333</p>
+        </li>
+    </ul>
 </div>
