--- a/PDP/PDP/Views/Home/Index.cshtml
+++ b/PDP/PDP/Views/Home/Index.cshtml
@@ -5,32 +5,45 @@
 		filter: invert(100%);
 	}
 </style>
-<div class="text-center align-items-center justify-content-center mb-3"><br>
-	<h1 class="text-center">PDP GROUP</h1><br />
-	<div class="container-fluid">
-		<div class="row row-cols-1 row-cols-lg-2 row-cols-md-1 row-cols-sm-1 row-cols-xl-2">
-			<div>
-				<h2 >We care about you</h2><br>
-				<h4 style="padding-left:10px; padding-right:10px">Contrary to popular belief, Lorem Ipsum is not simply random text. Its roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.Many desktop publishing packages and web page editors now use Lorem Ipsum and a search for 'lorem ipsum' will uncover many web sites still in their infancy. </h4><br />
-			</div>
-			<div>
-				<img class="card-img-top" src="https://cdn.systematic.com/media/g0sj1tbg/hospital-building-001-global.jpg?mode=crop&width=1200&height=630&center=" alt="outside-hospital" />
-			</div>
-		</div>
-	</div><br /><br />
-	<div class="container-fluid">
-		<div class="row row-cols-1 row-cols-lg-2 row-cols-md-2 row-cols-sm-1 row-cols-xl-2">
-			<div>
-				<img class="card-img-top" src="https://i0.wp.com/mississippitoday.org/wp-content/uploads/2018/10/hospital-stock.jpg?ssl=1" alt="inside-hospital" />
-			</div>
-			<div>
-				<h2>
-					The best doctor
-				</h2><br>
-					 <h4 style="padding-left:10px; padding-right:10px">Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</h4><br />
-			</div>
-		</div>
-	</div>
+<div class="text-center align-items-center justify-content-center mb-3">
+    <br>
+    <h1 class="text-center">⚕️PDP GROUP⚕️</h1><br />
+    <div class="container-fluid">
+        <div class="row row-cols-1 row-cols-lg-2 row-cols-md-2 row-cols-sm-1 row-cols-xl-2">
+            <div>
+                <img class="card-img-top" src="https://static.vecteezy.com/system/resources/previews/004/493/181/original/hospital-building-for-healthcare-background-illustration-with-ambulance-car-doctor-patient-nurses-and-medical-clinic-exterior-free-vector.jpg" alt="inside-hospital" />
+            </div>
+            <div>
+                <h2>
+                    The best doctor
+                </h2><br>
+                     <h4 style="padding-left:10px; padding-right:10px">
+                         We present to you an ensemble of extraordinary healers, whose expertise and artistry in the realm of medicine transcend ordinary boundaries.
+                         Within their noble hearts, the flame of compassion burns brightly, guiding their hands to bring solace and restoration to those in need.
+                         These guardians of health possess a mastery honed by years of tireless pursuit, their wisdom interwoven with the tapestry of experience.
+                     </h4><br />
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="container-fluid">
+        <div class="row row-cols-1 row-cols-lg-2 row-cols-md-1 row-cols-sm-1 row-cols-xl-2">
+            <div>
+                <h2>We care about you</h2><br>
+                <h4 style="padding-left:10px; padding-right:10px">
+                    We hold a deep and genuine concern for your well-being, and your happiness is of utmost importance to us.
+                    Our unwavering commitment is to ensure that you feel valued and cared for in every aspect of your experience with us.
+                    Your safety, comfort, and overall satisfaction are at the forefront of our priorities, and we are dedicated to going above and beyond to meet your needs.
+                    We want you to know that you are not just a customer to us; you are a cherished individual whose happiness and welfare we genuinely care about.
+                </h4><br />
+            </div>
+            <div>
+                <img class="card-img-top" src="https://th-thumbnailer.cdn-si-edu.com/qL8iOmVhBPnp_P60qNZZgw-6ST0=/fit-in/1600x0/https://tf-cmsv2-smithsonianmag-media.s3.amazonaws.com/filer/b4/c6/b4c65fd0-01ba-4262-9b3d-f16b53bca617/istock-172463472.jpg" alt="outside-hospital" />
+            </div>
+        </div>
+    </div><br /><br />
 </div>
 <br />
 <br />
@@ -38,13 +51,13 @@
 	<div id="carouseloppinions" class="carousel slide" data-ride="carousel">
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<h4>"I was saved by a very good team. Also the site is nice."<br /></h4> <h6><span class="text-muted">Mike Thomas, Lawyer, Bucharest</span></h6>&nbsp;
+                <h4>"The online service exceeded my expectations with their knowledgeable and empathetic doctors. The convenience of receiving top-notch care from home was outstanding. Thank you for the exceptional experience!"<br /></h4> <h6><span class="text-muted">Mike Thomas, Lawyer, Bucharest</span></h6>&nbsp;
 			</div>
 			<div class="carousel-item">
-				<h4>"I found everything I needed."<br></h4><h6><span class="text-muted">Vicentio Thomas, Entrepreneur, Las Vegas</span></h6>&nbsp;
+                <h4>"The doctors on the online platform were professional, attentive, and provided clear recommendations. The user-friendly interface made the process efficient and convenient. Highly recommend!"<br></h4><h6><span class="text-muted">Vicentio Thomas, Entrepreneur, Las Vegas</span></h6>&nbsp;
 			</div>
 			<div class="carousel-item">
-				<h4>"5 out of 5. Great website! I really like it!"<br></h4><h6><span class="text-muted">Ed Pavlone, Postman, Miami</span></h6>&nbsp;
+                <h4>"Impressed by the prompt and personalized responses from the doctors. The online service provides exceptional care and a user-friendly experience. Highly recommended!"<br></h4><h6><span class="text-muted">Ed Pavlone, Postman, Miami</span></h6>&nbsp;
 			</div>
 		</div>
 		<a class="carousel-control-prev" href="#carouseloppinions" role="button" data-slide="prev">
