--- a/PDP/PDP/Views/Home/Contact.cshtml
+++ b/PDP/PDP/Views/Home/Contact.cshtml
@@ -1,55 +1,104 @@
-﻿@if (TempData.ContainsKey("message"))
-{
-	<h1>@ViewBag.message</h1>
+﻿﻿@{
+    ViewBag.Title = "Contact";
 }
 
-<style>
-	h1 {
-		color: darkblue;
-	}
+<div class="container">
 
-	img {
-		border: 3px dashed indianred;
-	}
-</style>
-<body>
-	@if (TempData.ContainsKey("message"))
-	{
-		<h1 class="text-center"> @ViewBag.message&nbsp;</h1>
-		<br />
-	}
-<br /><h2 class="text-center">How to get to us?</h2><br /><br />
+    <div class="section-title">
+        <h2>Contact</h2>
 
-	<div class="container-fluid">
-				<div style="width: 100%">
-					<div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=STRADA ACADEMIEI&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://formatjson.org/">format json</a></div>
-					<style>
-						.mapouter {
-							position: relative;
-							text-align: right;
-							width: 100%;
-							height: 400px;
-						}
+    </div>
 
-						.gmap_canvas {
-							overflow: hidden;
-							background: none !important;
-							width: 100%;
-							height: 400px;
-						}
+</div>
 
-						.gmap_iframe {
-							height: 400px !important;
-						}
-					</style></div>
-				</div><br />
-				<h2 class="text-center">Our time:</h2>
-				<h4 style="text-align:center">Monday - Friday: 00:00-23:59</h4>
-				&nbsp;
-				<h4 style="text-align:center">Saturday: 00:00-23:59</h4>
-				&nbsp;
-				<h4 style="text-align:center">Sunday: 00:00-23:59</h4>
-				&nbsp;<br />
-	</div>				
-</body>
-<hr/>
+<div class="container-fluid h-100 contact">
+    <div class="row h-100">
+        <div class="col-12">
+            <div style="width: 100%">
+                <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Strada%20Doctor%20Ioan%20Nanu-Muscel%2012,%20Bucure%C8%99ti+(MedSana)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container contact">
+
+    <div class="row mt-5">
+
+        <div class="col-lg-6">
+
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="info-box">
+                        <i class="bx bx-map"></i>
+                        <h5 class="card-title">Adresa Noastra</h5>
+                        <p class="card-text">Bucuresti, Strada X</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="info-box mt-4">
+                        <i class="bx bx-envelope"></i>
+                        <h5 class="card-title">Email</h5>
+                        <p class="card-text">med@gmail.com</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="info-box mt-4">
+                        <i class="bx bx-phone-call"></i>
+                        <h5 class="card-title">Telefon</h5>
+                        <p class="card-text">+40777777777</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-lg-6">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <input type="text" class="form-control" placeholder="Nume si Prenume">
+
+                    </div>
+                    <div class="form-group col-md-6">
+                        <input type="email" class="form-control" placeholder="Adresa de email">
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <input type="number" class="form-control" placeholder="Numarul de telefon">
+
+                    </div>
+                    <div class="form-group col-md-6">
+                        <select class="form-control" name="" id="">
+                            <option selected>Country</option>
+                            <option>Romania</option>
+                            <option>Bulgaria</option>
+                            <option>Ungaria</option>
+                            <option>Moldova</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-12">
+                        <input type="text" class="form-control" placeholder="Subiect">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-12">
+                        <textarea class="form-control" rows="3"></textarea>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-12 text-center">
+                        <div class="text-center"><button type="submit">Trimite</button></div>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+
+    </div>
+
+</div>
