--- a/PDP/PDP/Views/Home/Index.cshtml
+++ b/PDP/PDP/Views/Home/Index.cshtml
@@ -1,64 +1,200 @@
-﻿<style>
-	.carousel-control-next,
-	.carousel-control-prev,
-	.carousel-indicators {
-		filter: invert(100%);
-	}
+﻿﻿@{
+    ViewBag.Title = "Home Page";
+}
+
+<style>
+    body {
+        font: 400 15px Lato, sans-serif;
+        line-height: 1.8;
+        color: #818181;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+        background-position: center;
+    }
+
+    h2 {
+        font-size: 24px;
+        text-transform: uppercase;
+        color: #303030;
+        font-weight: 600;
+        margin-bottom: 30px;
+    }
+
+    h4 {
+        font-size: 19px;
+        line-height: 1.375em;
+        color: #303030;
+        font-weight: 400;
+        margin-bottom: 30px;
+    }
+
+    .jumbotron {
+        text-align: center;
+        background: rgba(255, 255, 255, 0.9);
+        padding-top: 30px;
+        padding-bottom: 30px;
+        margin-bottom: 50px;
+        border-top: 4px solid #3fbbc0;
+        border-left: 4px solid #3fbbc0;
+        box-shadow: 5px 5px 11px 0px;
+    }
+
+    .navbar {
+        box-shadow: none;
+    }
+
+    #about {
+        padding: 60px 50px;
+    }
+
+    .bg-grey {
+        background-color: #f6f6f6;
+    }
+
+    .logo {
+        color: darkslategray;
+        font-size: 200px;
+    }
+
+    .thumbnail {
+        padding: 0 0 15px 0;
+        border: none;
+        border-radius: 0;
+    }
+
+        .thumbnail img {
+            width: 100%;
+            height: 100%;
+            margin-bottom: 10px;
+        }
+
+    .carousel-control.right, .carousel-control.left {
+        background-image: none;
+        color: darkslategray;
+    }
+
+    .carousel-indicators li {
+        border-color: darkslategray;
+    }
+
+        .carousel-indicators li.active {
+            background-color: darkslategray;
+        }
+
+    .item h4 {
+        font-size: 19px;
+        line-height: 1.375em;
+        font-weight: 400;
+        font-style: italic;
+        margin: 70px 0;
+    }
+
+    .item span {
+        font-style: normal;
+    }
+
+    .panel {
+        border: 1px solid #f4511e;
+        border-radius: 0 !important;
+        transition: box-shadow 0.5s;
+    }
+
+        .panel:hover {
+            box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+        }
+
+    .panel-footer .btn:hover {
+        border: 1px solid #f4511e;
+        background-color: #fff !important;
+        color: #f4511e;
+    }
+
+    .panel-heading {
+        color: #fff !important;
+        background-color: #f4511e !important;
+        padding: 25px;
+        border-bottom: 1px solid transparent;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+    }
+
+    .panel-footer {
+        background-color: white !important;
+    }
+
+        .panel-footer h3 {
+            font-size: 32px;
+        }
+
+        .panel-footer h4 {
+            color: #aaa;
+            font-size: 14px;
+        }
+
+        .panel-footer .btn {
+            margin: 15px 0;
+            background-color: #f4511e;
+            color: #fff;
+        }
+
+    footer .glyphicon {
+        font-size: 20px;
+        margin-bottom: 20px;
+        color: #f4511e;
+    }
+
+    .slide {
+        animation-name: slide;
+        -webkit-animation-name: slide;
+        animation-duration: 1s;
+        -webkit-animation-duration: 1s;
+        visibility: visible;
+    }
+
+    html {
+        scroll-behavior: smooth;
+    }
 </style>
-<div class="text-center align-items-center justify-content-center mb-3"><br>
-	<h1 class="text-center">PDP GROUP</h1><br />
-	<div class="container-fluid">
-		<div class="row row-cols-1 row-cols-lg-2 row-cols-md-1 row-cols-sm-1 row-cols-xl-2">
-			<div>
-				<h2 >We care about you</h2><br>
-				<h4 style="padding-left:10px; padding-right:10px">Contrary to popular belief, Lorem Ipsum is not simply random text. Its roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.Many desktop publishing packages and web page editors now use Lorem Ipsum and a search for 'lorem ipsum' will uncover many web sites still in their infancy. </h4><br />
-			</div>
-			<div>
-				<img class="card-img-top" src="https://cdn.systematic.com/media/g0sj1tbg/hospital-building-001-global.jpg?mode=crop&width=1200&height=630&center=" alt="outside-hospital" />
-			</div>
-		</div>
-	</div><br /><br />
-	<div class="container-fluid">
-		<div class="row row-cols-1 row-cols-lg-2 row-cols-md-2 row-cols-sm-1 row-cols-xl-2">
-			<div>
-				<img class="card-img-top" src="https://i0.wp.com/mississippitoday.org/wp-content/uploads/2018/10/hospital-stock.jpg?ssl=1" alt="inside-hospital" />
-			</div>
-			<div>
-				<h2>
-					The best doctor
-				</h2><br>
-					 <h4 style="padding-left:10px; padding-right:10px">Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</h4><br />
-			</div>
-		</div>
-	</div>
-</div>
 <br />
-<br />
-<div class="text-center mb-3">
-	<div id="carouseloppinions" class="carousel slide" data-ride="carousel">
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<h4>"I was saved by a very good team. Also the site is nice."<br /></h4> <h6><span class="text-muted">Mike Thomas, Lawyer, Bucharest</span></h6>&nbsp;
-			</div>
-			<div class="carousel-item">
-				<h4>"I found everything I needed."<br></h4><h6><span class="text-muted">Vicentio Thomas, Entrepreneur, Las Vegas</span></h6>&nbsp;
-			</div>
-			<div class="carousel-item">
-				<h4>"5 out of 5. Great website! I really like it!"<br></h4><h6><span class="text-muted">Ed Pavlone, Postman, Miami</span></h6>&nbsp;
-			</div>
-		</div>
-		<a class="carousel-control-prev" href="#carouseloppinions" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carouseloppinions" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>&nbsp;
-		<ol class="carousel-indicators text-light">
-			<li data-target="#carouseloppinions" data-slide-to="0" class="active" style="color:black"></li>
-			<li data-target="#carouseloppinions" data-slide-to="1" style="color:black"></li>
-			<li data-target="#carouseloppinions" data-slide-to="2" style="color:black"></li>
-		</ol>
-	</div>
+<div class="jumbotron text-center contact info-box">
+    <h1 style="color:black">MediConnect</h1>
+    <h4>Partenerul dumneavoastră de încredere în îngrijirea medicală online!</h4>
 </div>
+
+<section id="features" class="features">
+    <div class="section-title">
+        <h2>De ce sa alegi MediConnect?</h2>
+    </div>
+    <div class="container aos-init aos-animate" data-aos="fade-up">
+
+        <div class="row">
+            <div class="col-lg-6 order-2 order-lg-1 aos-init aos-animate" data-aos="fade-right">
+                <div class="icon-box mt-5 mt-lg-0">
+                    <i class="bx bx-receipt"></i>
+                    <h4>Consultații medicale online</h4>
+                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                </div>
+                <div class="icon-box mt-5">
+                    <i class="bx bx-cube-alt"></i>
+                    <h4>Ușurință în gestionarea sănătății</h4>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                </div>
+                <div class="icon-box mt-5">
+                    <i class="bx bx-images"></i>
+                    <h4>Recomandări personalizate</h4>
+                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                </div>
+                <div class="icon-box mt-5">
+                    <i class="bx bx-shield"></i>
+                    <h4>Siguranță și confidențialitate</h4>
+                    <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                </div>
+            </div>
+            <div class="image col-lg-6 order-1 order-lg-2 aos-init aos-animate" style="background-image: url(&quot;https://media.istockphoto.com/id/1413031831/photo/medicine-doctor-holding-red-heart-shape-in-hand-medical-concept-stock-photo.jpg?b=1&s=170667a&w=0&k=20&c=QIzCtiV_e_YIyWNejIS2H28jyJDxG-XxNSbCyD6UKHM=&quot;);" data-aos="zoom-in"></div>
+        </div>
+
+    </div>
+</section>
