--- a/PDP/PDP/Views/Shared/_Layout.cshtml
+++ b/PDP/PDP/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>MediConnect</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/assets")
     @Scripts.Render("~/bundles/modernizr")
@@ -13,6 +13,10 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <style>
+        body{
+            padding-top:0px;
+            padding-bottom:0px;
+        }
         a {
             text-decoration: none;
             display: flex;
@@ -50,26 +54,29 @@
 
                         </li>
                         <li class="nav-item"> @Html.ActionLink("Doctori", "Index", "Doctors")</li>
-                        @if (User.IsInRole("Patient"))
+                        @if (User.IsInRole("User"))
                         {
 
-                            <li>@Html.ActionLink("Informatii personale", "Show", "Patients")</li>
+                            <li>@Html.ActionLink("Informatii personale", "Info", "Home")</li>
                         }
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">@Html.ActionLink("Adaugare specializari", "Create", "Specializations")</li>
                             <li class="nav-item">@Html.ActionLink("Adaugare Doctor", "Create", "Doctors")</li>
+                            <li class="nav-item">@Html.ActionLink("Afisare utilizatori", "Index", "Users")</li>
                         }
                         <li class="nav-item">@Html.ActionLink("Afisare specializari", "Index", "Specializations")</li>
                         <li class="nav-item">@Html.ActionLink("Despre noi", "About", "Home")</li>
                         <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home")</li>
                     </ul>
+                    @Html.Partial("_LoginPartial")
                 </div>
             </div>
             <div class="col-sm p-3 min-vh-100">
                 <div class="container body-content">
                     @RenderBody()
                     <hr />
+                    <br />
                     <footer>
                         <p>&copy; @DateTime.Now.Year -MediConnect&trade;</p>
                     </footer>
