--- a/PDP/PDP/Views/Home/Index.cshtml
+++ b/PDP/PDP/Views/Home/Index.cshtml
@@ -165,36 +165,41 @@
 </div>
 
 <section id="features" class="features">
-    <div class="section-title">
+    <div class="section-title text-center">
         <h2>De ce sa alegi MediConnect?</h2>
     </div>
     <div class="container aos-init aos-animate" data-aos="fade-up">
 
         <div class="row">
-            <div class="col-lg-6 order-2 order-lg-1 aos-init aos-animate" data-aos="fade-right">
-                <div class="icon-box mt-5 mt-lg-0">
-                    <i class="bx bx-receipt"></i>
-                    <h4>Consultații medicale online</h4>
-                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
-                </div>
-                <div class="icon-box mt-5">
-                    <i class="bx bx-cube-alt"></i>
-                    <h4>Ușurință în gestionarea sănătății</h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-                </div>
-                <div class="icon-box mt-5">
-                    <i class="bx bx-images"></i>
-                    <h4>Recomandări personalizate</h4>
-                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
-                </div>
-                <div class="icon-box mt-5">
-                    <i class="bx bx-shield"></i>
-                    <h4>Siguranță și confidențialitate</h4>
-                    <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+            <div class="col-md-7">
+                <div data-aos="fade-right">
+                    <div class="icon-box mt-5 mt-lg-0">
+                        <i class="bx bx-receipt"></i>
+                        <h4>Consultații medicale online</h4>
+                        <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                    </div>
+                    <div >
+                        <i class="bx bx-cube-alt"></i>
+                        <h4>Ușurință în gestionarea sănătății</h4>
+                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                    </div>
+                    <div>
+                        <i class="bx bx-images"></i>
+                        <h4>Recomandări personalizate</h4>
+                        <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                    </div>
+                    <div>
+                        <i class="bx bx-shield"></i>
+                        <h4>Siguranță și confidențialitate</h4>
+                        <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                    </div>
                 </div>
             </div>
-            <div class="image col-lg-6 order-1 order-lg-2 aos-init aos-animate" style="background-image: url(&quot;https://media.istockphoto.com/id/1413031831/photo/medicine-doctor-holding-red-heart-shape-in-hand-medical-concept-stock-photo.jpg?b=1&s=170667a&w=0&k=20&c=QIzCtiV_e_YIyWNejIS2H28jyJDxG-XxNSbCyD6UKHM=&quot;);" data-aos="zoom-in"></div>
-        </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-4 text-center">
+                <br />
+                <img class="img-responsive" src="https://svgsilh.com/svg/295067.svg" style="height:330px; margin:auto;" alt="poza_utilizator" />
+            </div>
 
     </div>
 </section>
