--- a/PDP/PDP/Views/Home/Contact.cshtml
+++ b/PDP/PDP/Views/Home/Contact.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
 
-    <div class="section-title">
+    <div class="section-title text-center">
         <h2>Contact</h2>
 
     </div>
@@ -15,35 +15,35 @@
     <div class="row h-100">
         <div class="col-12">
             <div style="width: 100%">
-                <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Strada%20Doctor%20Ioan%20Nanu-Muscel%2012,%20Bucure%C8%99ti+(MedSana)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
+                <div class="rounded" style="width: 100%; border-style:solid; border-width:1.5px"><iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Strada%20Doctor%20Ioan%20Nanu-Muscel%2012,%20Bucure%C8%99ti+(MedSana)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="container contact">
+<div class="container contact text-center">
 
     <div class="row mt-5">
 
-        <div class="col-lg-6">
+        <div class="col-lg-5">
 
             <div class="row">
                 <div class="col-md-12">
-                    <div class="info-box">
+                    <div class="info-box rounded" style="background-color:lightblue; border-width:1.5px; padding:5px; border-style:solid">
                         <i class="bx bx-map"></i>
                         <h5 class="card-title">Adresa Noastra</h5>
                         <p class="card-text">Bucuresti, Strada X</p>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="info-box mt-4">
+                    <div class="info-box mt-4 rounded" style="background-color:lightblue; border:solid; padding:5px ; border-width: 1.5px;">
                         <i class="bx bx-envelope"></i>
                         <h5 class="card-title">Email</h5>
                         <p class="card-text">med@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="info-box mt-4">
+                    <div class="info-box mt-4 rounded" style="background-color:lightblue; border:solid; padding:5px ; border-width: 1.5px;">
                         <i class="bx bx-phone-call"></i>
                         <h5 class="card-title">Telefon</h5>
                         <p class="card-text">+40777777777</p>
@@ -52,53 +52,53 @@
             </div>
 
         </div>
+        <div class="col-lg-1"></div>
+            <div class="col-lg-6 rounded" style="background-color:lightblue; border:solid; padding:15px ; border-width: 1.5px;">
+                <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <input type="text" class="form-control" placeholder="Nume si Prenume">
 
-        <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <input type="text" class="form-control" placeholder="Nume si Prenume">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <input type="email" class="form-control" placeholder="Adresa de email">
+                        </div>
+                    </div>
 
-                    </div>
-                    <div class="form-group col-md-6">
-                        <input type="email" class="form-control" placeholder="Adresa de email">
-                    </div>
-                </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <input type="number" class="form-control" placeholder="Numarul de telefon">
 
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <input type="number" class="form-control" placeholder="Numarul de telefon">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <select class="form-control" name="" id="">
+                                <option selected>Country</option>
+                                <option>Romania</option>
+                                <option>Bulgaria</option>
+                                <option>Ungaria</option>
+                                <option>Moldova</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            <input type="text" class="form-control" placeholder="Subiect">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            <textarea class="form-control" rows="3"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-12 text-center">
+                            <div class="text-center"><button type="submit">Trimite</button></div>
+                        </div>
+                    </div>
 
-                    </div>
-                    <div class="form-group col-md-6">
-                        <select class="form-control" name="" id="">
-                            <option selected>Country</option>
-                            <option>Romania</option>
-                            <option>Bulgaria</option>
-                            <option>Ungaria</option>
-                            <option>Moldova</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-12">
-                        <input type="text" class="form-control" placeholder="Subiect">
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-12">
-                        <textarea class="form-control" rows="3"></textarea>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-12 text-center">
-                        <div class="text-center"><button type="submit">Trimite</button></div>
-                    </div>
-                </div>
+                </form>
+            </div>
 
-            </form>
         </div>
 
     </div>
-
-</div>
